--- a/IS413Mission4-Movies/IS413Mission5-Movies.csproj
+++ b/IS413Mission4-Movies/IS413Mission5-Movies.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>IS413Mission4_Movies</RootNamespace>
+    <RootNamespace>IS413Mission5_Movies</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
